--- a/VRChat/29/1022529.html
+++ b/VRChat/29/1022529.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "YOth4vxVkbNoOgMLPPUf9gMLqpUa7pJ3nxNnGDkUvS0="></script>
+    "SMBD0jBqzyv3zeelAJ6kNu+FgrLGIS9vZL0jgV1ZgeI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ガンダムダンボール","description":"俺がガンダムだ！\n\n改変OK何してもOKです。\nテクスチャが変かもしれません。申し訳ないです。\n\n追記:Unity上で開くとめっっっちっちゃくなってしまうので\nスケールを100倍にして使用することをお勧めします。","url":"https://booth.pm/ja/items/1022529","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/81aca01d-8cc1-4f1d-9ff6-1e283ef2864f/i/1022529/9fbba24a-b4b1-4b41-b2d6-c4492e2df8da_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="YOth4vxVkbNoOgMLPPUf9gMLqpUa7pJ3nxNnGDkUvS0="></script>
+    nonce="SMBD0jBqzyv3zeelAJ6kNu+FgrLGIS9vZL0jgV1ZgeI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,10 +158,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1022529/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              374
+                              376
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1022529/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              374
+                              376
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
