--- a/VRChat/02/1022202.html
+++ b/VRChat/02/1022202.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "ahLY583gLHOU6wM+HUohyemTEiPG7Q9Xx3cFUfbhFWQ="></script>
+    "5dqGfT7NTOUCkrtP0KS31MCqsBjyuXwHXrXtu/HfWUY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナルモデル 「雷電-レイディエン-」","description":"販売用人型3Dモデル第二弾　\n量産型汎用義体弐号機 \"雷電(Leidian:レイディエン)\"\nVRCアバターとかゲームとかに使ってあげてください。\nまた自作シェーダYMatShader2を同梱しております。\nこちらもご自由にお使いください。\n\n本体ポリゴン: 9744(+非表示メッシュ364)\nプリセット表情: 6\n\nリップシンク,アイトラッキング実装済み","url":"https://booth.pm/ja/items/1022202","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3000"},"image":"https://booth.pximg.net/c/620x620/9e316222-2e53-4586-9471-58ac96f0baec/i/1022202/da5fcc6f-c6c5-4cd1-93b9-1dfa1157266f_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ahLY583gLHOU6wM+HUohyemTEiPG7Q9Xx3cFUfbhFWQ="></script>
+    nonce="5dqGfT7NTOUCkrtP0KS31MCqsBjyuXwHXrXtu/HfWUY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1022202/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               164
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1022202/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               164
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
