--- a/VRChat/25/1022025.html
+++ b/VRChat/25/1022025.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "LG/BYHLmA52cZW75KkEVDE25dvGbNDNEFyx+oVoSY0U="></script>
+    "ARIlTZm/AzKy56y5tNAG0TI5pgckSY/jPerPISU1y/U="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向け　ハロウィン【幽霊とお菓子セット】","description":"【利用規約】\n\n\n著作権の放棄はしません\n他の人に迷惑のかからない範囲でご利用ください。\n商用、個人利用共に自由です。\n\nテクスチャ、モデルの改変は自由ですが、\n再配布は改変の有無に関わらず禁止とします。\n\nなにかありましたらTwitterまでご連絡ください。\nTwitterID @nui_ikaruga\n\n2018.9.22 ヌヰ\n\n\n・幽霊 628ポリゴン\n　デフォルメ調の幽霊。ボーン入ってるから揺れるよ\n　シェイプキーで表情も変えられるので、本体と連動させよう！\n\n・ランタン 484ポリゴン\n　クラシカルなランタン。絵柄を変えれば普段使いも出来るぞ\n　ボーンが入ってるので揺らせます\n\n・カボチャヘルメット 552ポリゴン\n　生きのいいカボチャ。幽霊ほどではないが表情が変わるぞ！\n　\n・カボチャかご 688ポリゴン\n　持ち手がついたカボチャ。死んでるので表情はない\n\n・飴玉                  28ポリゴン\n　ペロペロキャンディー 108ポリゴン\n　キャンディケイン     112ポリゴン\n　チョコレート          20ポリゴン\n　ノーマルクッキー      12ポリゴン\n　幽霊クッキー         100ポリゴン\n　コウモリクッキー     132ポリゴン\n　カボチャクッキー      88ポリゴン\n\n　お菓子の詰め合わせ。食べ過ぎるとポリゴン増えるぞ\n","url":"https://booth.pm/ja/items/1022025","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/1eae7904-bf49-4bec-baa6-9c89e938aed4/i/1022025/6d48f7db-bfa6-4f38-bd97-5b9756912da8_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="LG/BYHLmA52cZW75KkEVDE25dvGbNDNEFyx+oVoSY0U="></script>
+    nonce="ARIlTZm/AzKy56y5tNAG0TI5pgckSY/jPerPISU1y/U="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1022025/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               208
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1022025/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               208
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
