--- a/VRChat/27/1021527.html
+++ b/VRChat/27/1021527.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "PayypG9E4SG4iLeXPy//W8Ii/anzviroZZB/s09wKrw="></script>
+    "2L/QdPqzSK54vhchsXqhyvVx/VPhJqo98d+5uytf8A8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【アイテム】くらげさん","description":"VRChat用3Dモデル 「くらげさん」\n\nペットとして自分のアバターにくっつけたり、\nアバターとして使ったり、\nワールドアイテムとして使ったり、\n\nぷるんぷるんのくらげさんを自由に使って遊んでくださいね！\n\nシェイプキーは、リップシンク用5個と、目をつぶる　が入っています。\n\n\nポリゴン数：1220\n\nシェーダーはUnlitWFを設定しています。\nhttps://github.com/whiteflare/Unlit_WF_ShaderSuite/releases\n\n\n\n＜更新履歴＞\n2020.04.30 unity2018対応。シェーダーをUnlitWFに変更。\n2019.04.23\n・マテリアルを１つ減らし、FBX、テクスチャを更新しました。\n・VRChatワールドアイテム用設定済みのunitypackageを追加しました。\n","url":"https://booth.pm/ja/items/1021527","offers":{"priceCurrency":"JPY","@type":"Offer","price":"600"},"image":"https://booth.pximg.net/c/620x620/1f163e5b-a0e4-46e7-be27-4850d72c7bc9/i/1021527/ffbe35a1-21ba-4c5d-94ef-606b28049103_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="PayypG9E4SG4iLeXPy//W8Ii/anzviroZZB/s09wKrw="></script>
+    nonce="2L/QdPqzSK54vhchsXqhyvVx/VPhJqo98d+5uytf8A8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -163,7 +165,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1021527/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               199
@@ -178,14 +180,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1021527/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               199
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
