--- a/VRChat/25/1021025.html
+++ b/VRChat/25/1021025.html
@@ -74,9 +74,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "/NR++cg85F1cui8lr5yHbzoBtm0a0uPxXfdVn4wi1so="></script>
+    "Bl/i1sKJxOSHj+CQ2vups4TgSaz1n0ozJA8OMeTqaqw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"PCデスク","description":"110×60×75くらいのPCデスクです。\n三角面396です。\nfbx objファイルと、テクスチャファイルが入っています。\n\nPCdesk\n\n■モデル製作：ハザマススム\n　□Twitter https://twitter.com/hazama_susumu\n\n■説明\n　□使っている110×60×75ぐらいのPCデスクの3Dモデルです\n\n■免責\n　□このモデルデータを使って起きた不利益は\n　　いかなる場合でも製作者は一切責任を負いません\n　□著作権はハザマススムにあります\n\n■許可\n　□非商用・商用利用\n　□非改変・改変利用\n\n■禁止事項\n　□再配布\n　□自作発言\n　□迷惑行為\n","url":"https://booth.pm/ja/items/1021025","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/353af48e-2d96-4325-9c66-ad3463af6bc1/i/1021025/6c15bfd6-775c-42fe-b2b5-df77d5dfb6d5_base_resized.jpg"}
     </script>
@@ -84,16 +84,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="/NR++cg85F1cui8lr5yHbzoBtm0a0uPxXfdVn4wi1so="></script>
+    nonce="Bl/i1sKJxOSHj+CQ2vups4TgSaz1n0ozJA8OMeTqaqw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -121,6 +118,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -135,7 +134,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -176,7 +176,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1021025/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               21
@@ -191,14 +191,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1021025/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               21
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
