--- a/VRChat/29/1020729.html
+++ b/VRChat/29/1020729.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "remmuvp7YNn7K7ty3J6yA5bJ7vTBQ08IyRDCi0AD228="></script>
+    "oLVvyDdM6SYUIbtiVpDxlDeKrmDiyKbL/kNZd+qcIOc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"紅葉飾り","description":"シンプルな紅葉の飾りです。\n髪飾りや服飾、武器につけてみたり……なんでも組み合わせやすいと思います。\n","url":"https://booth.pm/ja/items/1020729","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/1020729/508091cc-5d1a-4f81-afa4-2e658934c6e9_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="remmuvp7YNn7K7ty3J6yA5bJ7vTBQ08IyRDCi0AD228="></script>
+    nonce="oLVvyDdM6SYUIbtiVpDxlDeKrmDiyKbL/kNZd+qcIOc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1020729/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               205
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1020729/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               205
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
