--- a/VRChat/51/1016051.html
+++ b/VRChat/51/1016051.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "vIQqPWcod5mcFlcF4N6oDpWueRZJklAxOPtJel/1D+M="></script>
+    "7rO8ylihUMMTCYrT+ERYFL6njWEcHPTcl/QsiNc8vdk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向けオリジナル3Dモデル「くじらちゃん」","description":"大きなお胸に無邪気な笑顔、食べることが大好きな女の子、くじらちゃんです。デザインモチーフはその名の通り鯨。\n\nVRChatでの利用を想定した３Dモデルです。\n\n【バージョン更新履歴】\n\n【2018年8月18日　Ver1.0　公開】\n\n【2018年10月23日Ver1.1に更新しました】\n\nVRChatでのレガシーアニメーションの廃止に伴い、まばたきをanimator方式に変更しました。\n\n\n【2018年12月15日Ver1.2を公開しました】\n\n個人で使用する分には以前のバージョンでも問題なく使用できます。1.2ではVRCのunity2017化によってアバターワールドのくじらちゃんのマテリアル数やdynamicbone等に制限がかかってしまったので、そちらの修正と同時に販売データの方も更新しました。\n顔と頭のメッシュを結合して、光の当たり方を均一にしたり、サンタコスチュームを追加したバージョンです。\n胸の揺れ方もより自然になっています。あまり使いどころがなかったのでミニくじらちゃんは1.2の方には入っていません。代わりに困り眉のシェイプキーが入っています。1.1も変わらず公開しているので、必要な際はそちらから持ってくることも可能です。BOOTHの商品画像にテクスチャのUV配列画像を追加しました。","url":"https://booth.pm/ja/items/1016051","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/9fbdc596-2bd2-4262-98df-0a0fa6cf30d9/i/1016051/cc487aaa-71e3-4d1d-9585-e9708e7d7f08_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="vIQqPWcod5mcFlcF4N6oDpWueRZJklAxOPtJel/1D+M="></script>
+    nonce="7rO8ylihUMMTCYrT+ERYFL6njWEcHPTcl/QsiNc8vdk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1016051/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               67
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1016051/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               67
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
