--- a/VRChat/01/1016001.html
+++ b/VRChat/01/1016001.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "GdHUy+KiLYDVH8SOMsU6uuuO4zXRPUb3oorxtTOdYlQ="></script>
+    "ws4Ox+p6SRlTryJZwfwCY9NF6jMKN1FHE020BD8mty4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"仕込み和傘","description":"VRchat向けの仕込み和傘です。塚の中には刀が隠されています！\nシェイプキーで折りたたむこともできます。\n\n和装の似合うアバターとあわせて使ってみてください！\n\n\n△890ポリゴン","url":"https://booth.pm/ja/items/1016001","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/9b92b4aa-727e-4ad3-8a66-111e77c11365/i/1016001/b1d89781-9061-4eb5-b5be-9459c194bd9d_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="GdHUy+KiLYDVH8SOMsU6uuuO4zXRPUb3oorxtTOdYlQ="></script>
+    nonce="ws4Ox+p6SRlTryJZwfwCY9NF6jMKN1FHE020BD8mty4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1016001/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               98
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1016001/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               98
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
